# vulkan-training

./: .gitignore  04.VulkanBasicTechniques.md  README.md
01.Intro/: 01.VulkanCoreConcepts.md  02.VulkanGraphicsPipeline.md  03.VulkanData.md  04.VulkanBasicTechniques.md  LICENSE  Vulkan mind map.bmpr
01.Intro/VulkanApp01/: VulkanApp.sln
01.Intro/VulkanApp01/VulkanApp/: Main.cpp  VulkanApp.vcxproj  VulkanRenderer.cpp  VulkanUtilities.h
01.Intro/VulkanApp02_DataInjection/VulkanApp_Data1/: Main.cpp  VulkanApp_Data1.vcxproj  VulkanApp_Data1.vcxproj.filters  VulkanMesh.cpp  VulkanMesh.h  VulkanUtilities.h
01.Intro/VulkanApp02_DataInjection/VulkanApp_Data2/: VulkanApp_Data2.vcxproj  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtilities.h
01.Intro/VulkanApp02_DataInjection/VulkanApp_Data3/: Main.cpp  VulkanApp_Data3.vcxproj
01.Intro/VulkanApp02_DataInjection/VulkanApp_Data4/: VulkanApp_Data4.vcxproj  VulkanMesh.h  VulkanRenderer.cpp
01.Intro/VulkanApp02_DataInjection/VulkanApp_Data5/: VulkanApp_Data5.vcxproj  VulkanMesh.cpp  VulkanRenderer.h  VulkanUtilities.h
01.Intro/VulkanApp02_DataInjection/VulkanApp_Data6/: Main.cpp  VulkanApp_Data6.vcxproj  VulkanApp_Data6.vcxproj.filters  VulkanRenderer.h
01.Intro/VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic01_Textures/: VulkanApp_Basic01_Textures.vcxproj  VulkanApp_Basic01_Textures.vcxproj.filters  VulkanMesh.h  VulkanRenderer.cpp  VulkanUtilities.h
01.Intro/VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic02_3DMesh/: Main.cpp  VulkanApp_Basic02_3DMesh.vcxproj  VulkanApp_Basic02_3DMesh.vcxproj.filters  VulkanMeshModel.h
01.Intro/VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic03_Mipmaps/: VulkanApp_Basic03_Mipmaps.vcxproj  VulkanRenderer.cpp  VulkanRenderer.h
01.Intro/VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic04_Multisampling/: VulkanRenderer.cpp  (+3 more)
01.Intro/VulkanApp04_AdvancedRenderingTechniques/: VulkanApp.sln
02.ModernEngine/: a.Intro.md  b.ResourceManagement.md
02.ModernEngine/GraphicsEngine/: GraphicsEngine.sln
02.ModernEngine/project/: RaptorEngine_Chapter10.vcxproj  RaptorEngine_Chapter12.vcxproj  RaptorEngine_Chapter2.vcxproj  RaptorEngine_Chapter5.vcxproj  RaptorEngine_Chapter9.vcxproj
02a.ModernEngine/project/: RaptorEngine_Chapter1.vcxproj  RaptorEngine_Chapter11.vcxproj  RaptorEngine_Chapter4.vcxproj  RaptorEngine_Chapter6.vcxproj
02b.ModernEngine_Starter/project/: RaptorEngine.sln
03.Intro-1.4/: Application.cpp  Application.hpp  CMakeLists.txt  Defines.h  main.cpp
03.Intro-1.4/BasicServices/: FileWriter.cpp  FileWriter.h  Log.cpp  Log.h  Platform.h  Platform_Linux.cpp  Platform_Win.cpp
03.Intro-1.4/Engine/: Engine.cpp  Engine.hpp  IRenderer.hpp  IScene.hpp
03.Intro-1.4/Engine/Renderer/: Buffer.cpp  Buffer.hpp  GltfModelLoader.cpp  GltfModelLoader.hpp  IRenderer.hpp  Image.cpp  Image.hpp  ImmediateSubmit.cpp  ImmediateSubmit.hpp  KtxTextureLoader.cpp  KtxTextureLoader.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp
03.Intro-1.4/Steps/Step00_Setup/: Step00Renderer.cpp  Step00Renderer.hpp  Step00Scene.hpp
03.Intro-1.4/Steps/Step01_BasicPipeline/: Step01Renderer.cpp  Step01Renderer.hpp  Step01Scene.hpp
03.Intro-1.4/Steps/Step02_Triangle/: Step02Renderer.cpp  Step02Renderer.hpp  Step02Scene.hpp
03.Intro-1.4/Steps/Step03_SwapchainRecreation/: Step03Renderer.cpp  Step03Renderer.hpp  Step03Scene.hpp
03.Intro-1.4/Steps/Step04_VertexBuffer/: Step04Renderer.cpp  Step04Renderer.hpp  Step04Scene.hpp
03.Intro-1.4/Steps/Step05_UniformBuffer/: Step05Renderer.cpp  Step05Renderer.hpp  Step05Scene.cpp  Step05Scene.hpp
03.Intro-1.4/Steps/Step06_Textures/: Step06Renderer.cpp  Step06Renderer.hpp  Step06Scene.cpp  Step06Scene.hpp
03.Intro-1.4/Steps/Step07_Depth/: Step07Renderer.cpp  Step07Renderer.hpp  Step07Scene.cpp  Step07Scene.hpp
03.Intro-1.4/Steps/Step08_Modele3D/: Step08Renderer.cpp  Step08Renderer.hpp  Step08Scene.cpp  Step08Scene.hpp
03.Intro-1.4/Steps/Step09_MultisamplingMipMaps/: Step09Renderer.cpp  Step09Renderer.hpp  Step09Scene.cpp  Step09Scene.hpp
03.Intro-1.4/Steps/Step10_ComputeShaderParticles/: Step10Renderer.cpp  Step10Renderer.hpp  Step10Scene.cpp  Step10Scene.hpp
03.Intro-1.4/Steps/Step11_GltfKtx2/: Step11Renderer.cpp  Step11Renderer.hpp  Step11Scene.cpp  Step11Scene.hpp
03.Intro-1.4/assets/shaders/: 01.BasicPipeline.slang  04.VertexBuffer.slang  05.UniformBuffer.slang  06.Textures.slang  07.Depth.slang  08.Modele3D.slang  09.Multisampling.slang  10.ComputeParticles.slang  11.GltfKtx2.slang
VulkanApp01/VulkanApp/: VulkanApp.vcxproj.filters  VulkanRenderer.h
VulkanApp02_DataInjection/: VulkanApp.sln
VulkanApp02_DataInjection/VulkanApp_Data1/: VulkanRenderer.cpp  VulkanRenderer.h
VulkanApp02_DataInjection/VulkanApp_Data2/: VulkanApp_Data2.vcxproj.filters  VulkanMesh.h
VulkanApp02_DataInjection/VulkanApp_Data3/: VulkanMesh.cpp  VulkanRenderer.cpp  VulkanRenderer.h
VulkanApp02_DataInjection/VulkanApp_Data4/: Main.cpp  VulkanRenderer.cpp.bak  VulkanRenderer.h
VulkanApp02_DataInjection/VulkanApp_Data5/: VulkanRenderer.cpp
VulkanApp02_DataInjection/VulkanApp_Data6/: VulkanApp_Data6.vcxproj  VulkanRenderer.cpp
VulkanApp03_BasicRenderingTechniques/: VulkanApp.sln
VulkanApp03_BasicRenderingTechniques/VulkanApp/: Main.cpp  VulkanApp.vcxproj  VulkanApp.vcxproj.filters  VulkanMesh.cpp  VulkanMesh.h  VulkanMeshModel.cpp  VulkanMeshModel.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtilities.h
VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic01_Textures/: Main.cpp  VulkanApp_Basic01_Textures.vcxproj  VulkanRenderer.h
VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic02_3DMesh/: Main.cpp  VulkanApp_Basic02_3DMesh.vcxproj  VulkanRenderer.cpp  VulkanRenderer.h
VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic03_Mipmaps/: VulkanApp_Basic03_Mipmaps.vcxproj  VulkanApp_Basic03_Mipmaps.vcxproj.filters  VulkanUtilities.h
VulkanApp03_BasicRenderingTechniques/VulkanApp_Basic04_Multisampling/: VulkanMesh.cpp  VulkanRenderer.cpp
(+145 files in other folders)
